--- a/demo/res/xml/fragment_demo.xml
+++ b/demo/res/xml/fragment_demo.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <androidx.preference.PreferenceCategory android:title="@string/title">
-
+    <androidx.preference.PreferenceCategory android:title="@string/text">
         <androidx.preference.CheckBoxPreference
             android:key="title_enabled"
             android:title="Titled enabled" />
@@ -19,13 +18,139 @@
     </androidx.preference.PreferenceCategory>
 
     <androidx.preference.PreferenceCategory android:title="@string/scrims">
-
         <androidx.preference.CheckBoxPreference
             android:key="scrims_shown"
-            android:title="@string/scrims_shown"  />
+            android:title="@string/scrims_shown" />
 
-        <androidx.preference.Preference
-            android:key="scrim_color"
-            android:title="@string/scrim_color" />
+        <androidx.preference.ListPreference
+            android:entries="@array/colors"
+            android:entryValues="@array/color_values"
+            android:icon="@drawable/ic_title_color"
+            android:key="content_scrim"
+            android:title="@string/content_scrim" />
+
+        <androidx.preference.ListPreference
+            android:entries="@array/colors"
+            android:entryValues="@array/color_values"
+            android:icon="@drawable/ic_subtitle_color"
+            android:key="statusbar_scrim"
+            android:title="@string/statusbar_scrim" />
+    </androidx.preference.PreferenceCategory>
+
+    <androidx.preference.PreferenceCategory android:title="@string/text_appeareances">
+        <androidx.preference.ListPreference
+            android:entries="@array/text_appearances"
+            android:entryValues="@array/text_appearance_values"
+            android:icon="@drawable/ic_title_style"
+            android:key="collapsed_title_text_appeareance"
+            android:title="@string/collapsed_title_text_appeareance" />
+
+        <androidx.preference.ListPreference
+            android:entries="@array/text_appearances"
+            android:entryValues="@array/text_appearance_values"
+            android:icon="@drawable/ic_title_style"
+            android:key="expanded_title_text_appeareance"
+            android:title="@string/expanded_title_text_appeareance" />
+
+        <androidx.preference.ListPreference
+            android:entries="@array/text_appearances"
+            android:entryValues="@array/text_appearance_values"
+            android:icon="@drawable/ic_subtitle_style"
+            android:key="collapsed_subtitle_text_appeareance"
+            android:title="@string/collapsed_subtitle_text_appeareance" />
+
+        <androidx.preference.ListPreference
+            android:entries="@array/text_appearances"
+            android:entryValues="@array/text_appearance_values"
+            android:icon="@drawable/ic_subtitle_style"
+            android:key="expanded_subtitle_text_appeareance"
+            android:title="@string/expanded_subtitle_text_appeareance" />
+    </androidx.preference.PreferenceCategory>
+
+    <androidx.preference.PreferenceCategory android:title="@string/text_colors">
+        <androidx.preference.ListPreference
+            android:entries="@array/colors"
+            android:entryValues="@array/color_values"
+            android:icon="@drawable/ic_title_color"
+            android:key="collapsed_title_text_color"
+            android:title="@string/collapsed_title_text_color" />
+
+        <androidx.preference.ListPreference
+            android:entries="@array/colors"
+            android:entryValues="@array/color_values"
+            android:icon="@drawable/ic_title_color"
+            android:key="expanded_title_text_color"
+            android:title="@string/expanded_title_text_color" />
+
+        <androidx.preference.ListPreference
+            android:entries="@array/colors"
+            android:entryValues="@array/color_values"
+            android:icon="@drawable/ic_subtitle_color"
+            android:key="collapsed_subtitle_text_color"
+            android:title="@string/collapsed_subtitle_text_color" />
+
+        <androidx.preference.ListPreference
+            android:entries="@array/colors"
+            android:entryValues="@array/color_values"
+            android:icon="@drawable/ic_subtitle_color"
+            android:key="expanded_subtitle_text_color"
+            android:title="@string/expanded_subtitle_text_color" />
+    </androidx.preference.PreferenceCategory>
+
+    <androidx.preference.PreferenceCategory android:title="@string/gravity">
+        <androidx.preference.ListPreference
+            android:entries="@array/colors"
+            android:entryValues="@array/color_values"
+            android:icon="@drawable/ic_collapsed_gravity"
+            android:key="collapsed_gravity"
+            android:title="@string/collapsed_gravity" />
+        <androidx.preference.ListPreference
+            android:entries="@array/colors"
+            android:entryValues="@array/color_values"
+            android:icon="@drawable/ic_expanded_gravity"
+            android:key="expanded_gravity"
+            android:title="@string/expanded_gravity" />
+    </androidx.preference.PreferenceCategory>
+
+    <androidx.preference.PreferenceCategory android:title="@string/typefaces">
+        <androidx.preference.ListPreference
+            android:entries="@array/colors"
+            android:entryValues="@array/color_values"
+            android:icon="@drawable/ic_title_typeface"
+            android:key="title_typeface"
+            android:title="@string/title_typeface" />
+        <androidx.preference.ListPreference
+            android:entries="@array/colors"
+            android:entryValues="@array/color_values"
+            android:icon="@drawable/ic_subtitle_typeface"
+            android:key="subtitle_typeface"
+            android:title="@string/subtitle_typeface" />
+    </androidx.preference.PreferenceCategory>
+
+    <androidx.preference.PreferenceCategory android:title="@string/margin">
+        <androidx.preference.ListPreference
+            android:entries="@array/colors"
+            android:entryValues="@array/color_values"
+            android:icon="@drawable/ic_margin_left"
+            android:key="left_margin"
+            android:title="@string/left_margin" />
+        <androidx.preference.ListPreference
+            android:entries="@array/colors"
+            android:entryValues="@array/color_values"
+            android:icon="@drawable/ic_margin_top"
+            android:key="top_margin"
+            android:title="@string/top_margin" />
+        <androidx.preference.ListPreference
+            android:entries="@array/colors"
+            android:entryValues="@array/color_values"
+            android:icon="@drawable/ic_margin_right"
+            android:key="right_margin"
+            android:title="@string/right_margin" />
+        <androidx.preference.ListPreference
+            android:entries="@array/colors"
+            android:entryValues="@array/color_values"
+            android:icon="@drawable/ic_margin_bottom"
+            android:key="bottom_margin"
+            android:title="@string/bottom_margin" />
     </androidx.preference.PreferenceCategory>
 </androidx.preference.PreferenceScreen>
