--- a/demo/res/layout/activity_demo.xml
+++ b/demo/res/layout/activity_demo.xml
@@ -18,18 +18,21 @@
         <com.google.android.material.appbar.SubtitleCollapsingToolbarLayout
             android:id="@+id/toolbarLayout"
             android:layout_width="match_parent"
-            android:layout_height="256dp"
+            android:layout_height="wrap_content"
+            android:animateLayoutChanges="true"
             android:fitsSystemWindows="true"
             app:contentScrim="?colorPrimary"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:subtitle="Papua, Indonesia"
-            app:title="Raja Ampat">
+            app:expandedSubtitleTextAppearance="@style/TextAppearance.Design.SubtitleCollapsingToolbar.ExpandedSubtitle.Inverse"
+            app:expandedTitleTextAppearance="@style/TextAppearance.Design.SubtitleCollapsingToolbar.ExpandedTitle.Inverse"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
+                android:id="@+id/image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:adjustViewBounds="true"
                 android:fitsSystemWindows="true"
-                android:scaleType="centerCrop"
+                android:scaleType="fitXY"
                 android:src="@drawable/bg"
                 app:layout_collapseMode="parallax" />
 
@@ -56,5 +59,6 @@
         android:layout_margin="16dp"
         android:onClick="scrollToTop"
         android:src="@drawable/ic_scroll_to_top"
+        android:visibility="invisible"
         app:fabSize="normal" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
