--- a/collapsingtoolbarlayout-subtitle/res/values/styles.xml
+++ b/collapsingtoolbarlayout-subtitle/res/values/styles.xml
@@ -9,9 +9,7 @@
         <item name="android:textColor">?android:attr/textColorPrimaryInverse</item>
     </style>
 
-    <style name="TextAppearance.Design.SubtitleCollapsingToolbar.ExpandedSubtitle" parent="TextAppearance.AppCompat.Headline" />
+    <style name="TextAppearance.Design.SubtitleCollapsingToolbar.ExpandedSubtitle" parent="TextAppearance.AppCompat.Subhead" />
 
-    <style name="TextAppearance.Design.SubtitleCollapsingToolbar.ExpandedSubtitle.Inverse" parent="TextAppearance.AppCompat.Headline">
-        <item name="android:textColor">?android:attr/textColorSecondaryInverse</item>
-    </style>
+    <style name="TextAppearance.Design.SubtitleCollapsingToolbar.ExpandedSubtitle.Inverse" parent="TextAppearance.AppCompat.Subhead.Inverse" />
 </resources>
