--- a/demo/res/layout/activity_demo.xml
+++ b/demo/res/layout/activity_demo.xml
@@ -18,7 +18,7 @@
         <com.google.android.material.appbar.SubtitleCollapsingToolbarLayout
             android:id="@+id/toolbarLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/expanded_height"
             android:animateLayoutChanges="true"
             android:fitsSystemWindows="true"
             app:contentScrim="?colorPrimary"
@@ -30,10 +30,9 @@
                 android:id="@+id/image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:adjustViewBounds="true"
                 android:fitsSystemWindows="true"
-                android:scaleType="fitXY"
-                android:src="@drawable/bg"
+                android:scaleType="centerCrop"
+                android:src="?colorAccent"
                 app:layout_collapseMode="parallax" />
 
             <androidx.appcompat.widget.Toolbar
