--- a/demo/res/values/dimens.xml
+++ b/demo/res/values/dimens.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="expanded_height">256dp</dimen>
+
+    <dimen name="padding_horizontal">24dp</dimen>
+    <dimen name="padding_vertical">12dp</dimen>
 </resources>
