--- a/collapsingtoolbarlayout-subtitle/res/values/attrs.xml
+++ b/collapsingtoolbarlayout-subtitle/res/values/attrs.xml
@@ -1,46 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="SubtitleCollapsingToolbarLayout">
-        <!-- Specifies extra space on the start, top, end and bottom
-             sides of the the expanded title text. Margin values should be positive,
+        <!-- Specifies extra space on the start, top, end and bottom sides of the the expanded title text.
+             Margin values should be positive,
              subtitle will also be affected. -->
         <attr name="expandedTitleMargin" />
-        <!-- Specifies extra space on the start side of the the expanded title text.
-             Margin values should be positive,
+        <!-- Specifies extra space on the start side of the the expanded title text. Margin values should be positive,
              subtitle will also be affected. -->
         <attr name="expandedTitleMarginStart" />
-        <!-- Specifies extra space on the top side of the the expanded title text.
-             Margin values should be positive,
+        <!-- Specifies extra space on the top side of the the expanded title text. Margin values should be positive,
              subtitle will also be affected. -->
         <attr name="expandedTitleMarginTop" />
-        <!-- Specifies extra space on the end side of the the expanded title text.
-             Margin values should be positive,
+        <!-- Specifies extra space on the end side of the the expanded title text. Margin values should be positive,
              subtitle will also be affected. -->
         <attr name="expandedTitleMarginEnd" />
-        <!-- Specifies extra space on the bottom side of the the expanded title text.
-             Margin values should be positive,
+        <!-- Specifies extra space on the bottom side of the the expanded title text. Margin values should be positive,
              subtitle will also be affected. -->
         <attr name="expandedTitleMarginBottom" />
 
-        <!-- The text appearance of the CollapsingToolbarLayout's title when it is fully
-             'expanded' -->
+        <!-- The text appearance of the CollapsingToolbarLayout's title when it is fully 'expanded' -->
         <attr name="expandedTitleTextAppearance" />
-        <!-- The text appearance of the CollapsingToolbarLayouts title when it is fully
-             'collapsed' -->
+        <!-- The text appearance of the CollapsingToolbarLayouts title when it is fully 'collapsed' -->
         <attr name="collapsedTitleTextAppearance" />
-        <!-- The text appearance of the CollapsingToolbarLayout's subtitle when it is fully
-             'expanded' -->
+        <!-- The text appearance of the CollapsingToolbarLayout's subtitle when it is fully 'expanded' -->
         <attr name="expandedSubtitleTextAppearance" format="reference" />
-        <!-- The text appearance of the CollapsingToolbarLayouts subtitle when it is fully
-             'collapsed' -->
+        <!-- The text appearance of the CollapsingToolbarLayouts subtitle when it is fully 'collapsed' -->
         <attr name="collapsedSubtitleTextAppearance" format="reference" />
 
-        <!-- The drawable to use as a scrim on top of the CollapsingToolbarLayouts content when
-             it has been scrolled sufficiently off screen. -->
+        <!-- The drawable to use as a scrim on top of the CollapsingToolbarLayouts
+             content when it has been scrolled sufficiently off screen. -->
         <attr name="contentScrim" />
         <!-- The drawable to use as a scrim for the status bar content when the
-             CollapsingToolbarLayout has been scrolled sufficiently off screen. Only works on
-             Lollipop with the correct setup. -->
+             CollapsingToolbarLayout has been scrolled sufficiently off screen.
+             Only works on Lollipop with the correct setup. -->
         <attr name="statusBarScrim" />
         <!-- The id of the primary Toolbar child that you wish to use for the purpose of collapsing.
              This Toolbar descendant view does not need to be a direct child of the layout.
