--- a/example/res/values/dimens.xml
+++ b/example/res/values/dimens.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="expanded_height">256dp</dimen>
-
-    <dimen name="padding_horizontal">24dp</dimen>
-    <dimen name="padding_vertical">12dp</dimen>
+    <dimen name="margin_scale">10dp</dimen>
 </resources>
