--- a/sample/src/main/res/layout/activity_main2.xml
+++ b/sample/src/main/res/layout/activity_main2.xml
@@ -19,14 +19,15 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/expanded_height"
             android:fitsSystemWindows="true"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:maxLines="2">
 
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?actionBarSize"
                 app:layout_collapseMode="pin"
-                app:title="Example" />
+                app:title="Hello, my name is Hendra Anggrian." />
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
