Multiline support for both title and subtitle

--- a/collapsingtoolbarlayout-subtitle/src/main/res/values/attrs.xml
+++ b/collapsingtoolbarlayout-subtitle/src/main/res/values/attrs.xml
@@ -17,6 +17,7 @@
         <attr name="collapsedTitleGravity" />
         <attr name="expandedTitleGravity" />
         <attr name="titleEnabled" />
+        <attr name="maxLines" />
 
         <!-- Inherited from appcompat -->
         <attr name="title" />
