--- a/collapsingtoolbarlayout-subtitle/src/main/res/values/public.xml
+++ b/collapsingtoolbarlayout-subtitle/src/main/res/values/public.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <public name="subtitleCollapsingToolbarLayoutStyle" type="attr" />
     <public name="expandedSubtitleTextAppearance" type="attr" />
     <public name="collapsedSubtitleTextAppearance" type="attr" />
     <public name="Widget.Design.SubtitleCollapsingToolbar" type="style" />
